change title and fix search icon location on mobile

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
   background-color: #FFF8F0;
   padding-right: 0px;
   position: relative;
+  z-index: 20;
 }
 input[type=text] {
   border: none;
@@ -76,7 +77,7 @@ input[type=text]:focus {
 #submit-btn{
   position: absolute;
   left:85%;
-  top:50%;
+  top:45%;
   -webkit-transform: translateY(-50%);
      -moz-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
@@ -88,7 +89,7 @@ input[type=text]:focus {
   font-size: 30px;
   color: rgba(51, 72, 112, 0.7);
   z-index: 1;
-  cursor: pointer
+  cursor: pointer;
 }
 #submit-btn:hover{
   color: rgba(51, 72, 112, 1);
@@ -637,6 +638,7 @@ input[type=text]:focus {
     }
     #submit-btn{
       font-size: 23px;
+      top: 21px;
     }
     .loc-toggle-container{
       display: -webkit-box;
